--- a/Partnership-Managment/src/main/resources/application.properties
+++ b/Partnership-Managment/src/main/resources/application.properties
@@ -32,13 +32,9 @@ zoom.api.base-url=https://api.zoom.us/v2
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rabiezerrim@gmail.com
+spring.mail.username=mygmail
 spring.mail.password=bcon cdjs yizi mjla
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-# Mailgun Configuration
-#mailgun.apiKey=3406eadf04ffa31b2db1a11274749826-e298dd8e-57d20e2a
-#mailgun.domain=sandbox5a8bca0efca14b54b1bcf68b93000214.mailgun.org
-#mailgun.apiUrl=https://api.mailgun.net/v3/sandbox5a8bca0efca14b54b1bcf68b93000214.mailgun.org/messages
